--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon --ignore node_modules/ index",
-    "test": "NODE_ENV=test node index",
+    "test": "node --inspect index",
     "production": "NODE_ENV=production node index",
     "start": "node index"
   },
@@ -14,12 +14,17 @@
   "author": "Suwei",
   "license": "ISC",
   "dependencies": {
+    "aguid": "^2.0.0",
     "boom": "^7.3.0",
     "hapi": "^18.1.0",
+    "hapi-auth-jwt2": "^8.3.0",
     "hapi-pino": "^5.4.1",
     "hapi-swagger": "^9.3.1",
     "inert": "^5.1.2",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "mysql2": "^1.6.5",
     "nconf": "^0.10.0",
     "redis": "^2.8.0",
