--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hapsimple",
+  "name": "hapisimple",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -10,7 +10,14 @@
     "production": "NODE_ENV=production node index",
     "start": "node index"
   },
-  "keywords": [],
+  "keywords": [
+    "Hapi",
+    "demo",
+    "simple",
+    "framework",
+    "框架",
+    "node.js"
+  ],
   "author": "Suwei",
   "license": "ISC",
   "dependencies": {
@@ -18,13 +25,13 @@
     "boom": "^7.3.0",
     "hapi": "^18.1.0",
     "hapi-auth-jwt2": "^8.3.0",
-    "hapi-pino": "^5.4.1",
     "hapi-swagger": "^9.3.1",
     "inert": "^5.1.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "mongodb": "^3.1.13",
     "mysql2": "^1.6.5",
     "nconf": "^0.10.0",
     "redis": "^2.8.0",
