--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
-node_modules
+node_modules/
 
 # 旧代码
 OldCode
