调整文件下载逻辑，先判断文件在mongodb是否存在，存在才执行下载，避免程序异常

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "redis",
     "文件服务"
   ],
-  "author": "Suwei",
+  "author": "suw",
   "license": "ISC",
   "dependencies": {
     "boom": "^7.3.0",
