--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "nconf": "^0.10.0",
     "redis": "^2.8.0",
     "sequelize": "^4.43.0",
-    "vision": "^5.4.4",
-    "when": "^3.7.8"
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
+    "vision": "^5.4.4"
   },
   "devDependencies": {}
 }
