--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.5.3",
+    "async-redis": "^1.1.7",
     "boom": "^7.3.0",
+    "crawler": "^1.2.0",
     "guid": "0.0.12",
     "hapi": "^18.1.0",
     "hapi-auth-jwt2": "^8.3.0",
     "hapi-swagger": "^9.3.1",
+    "images-downloader": "^1.0.3",
     "inert": "^5.1.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
@@ -41,9 +44,11 @@
     "mysql2": "^1.6.5",
     "nconf": "^0.10.0",
     "redis": "^2.8.0",
+    "restler": "^3.4.0",
     "sequelize": "^4.43.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
+    "superagent": "^5.0.2",
     "vision": "^5.4.4"
   },
   "devDependencies": {}
