知乎问题爬取及批量图片下载

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
+.vscode/
+
 node_modules/
 
 # 旧代码
