1、rabbitmq 集群支持 2、mysql 主从架构支持 3、博客园接口封装 4、程序支持docker部署。redis,mongo,mysql,rabbitmq

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,18 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "test cnblogs",
+            "program": "${workspaceFolder}\\libs\\cnblogs\\V3\\index.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "test cnblogs-consumer",
+            "program": "${workspaceFolder}\\libs\\cnblogs\\V3\\rabbit-consumer.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "spider zhihu questions",
             "program": "${workspaceFolder}\\spider\\zhihu\\questions.js"
         },
