拆分根目录docker-compose文件，不常变更的容器独立部署。如mysql、rabbit、redis、mongo

--- a/.dockerignore
+++ b/.dockerignore
@@ -8,3 +8,8 @@ README.md
 .vscode
 OldCode
 package-lock.json
+
+docker/mysql/master/other/
+docker/mysql/slave/other/
+docker/redis/data/
+docker/mongo/data/
