--- a/docker/mysql/docker-compose.yml
+++ b/docker/mysql/docker-compose.yml
@@ -1,10 +1,12 @@
 version: "3"
+
 services:
+
   local-mysql-master:
     image: mysql:5.7
     container_name: local-mysql-master
     ports:
-      - 3307:3306
+      - 3306:3306
     volumes:
       - /D/WorkSpace/Framework/HapiSimple/docker/mysql/master/other:/var/lib/mysql
       - /D/WorkSpace/Framework/HapiSimple/docker/mysql/master/config/mysqld.conf:/etc/mysql/mysql.conf.d/mysqld.cnf
@@ -13,7 +15,7 @@ services:
       MYSQL_DATABASE: Test
       MYSQL_USER: testadmin
       MYSQL_PASSWORD: "123456"
-    restart: unless-stopped
+    restart: always
     networks:
       local-mysql-ms-network:
         ipv4_address: 172.25.0.101
@@ -22,7 +24,7 @@ services:
     image: mysql:5.7
     container_name: local-mysql-slave
     ports:
-      - 3308:3306
+      - 33006:3306
     volumes:
       - /D/WorkSpace/Framework/HapiSimple/docker/mysql/slave/other:/var/lib/mysql
       - /D/WorkSpace/Framework/HapiSimple/docker/mysql/slave/config/mysqld.conf:/etc/mysql/mysql.conf.d/mysqld.cnf
@@ -31,7 +33,7 @@ services:
       MYSQL_DATABASE: Test
       MYSQL_USER: testadmin
       MYSQL_PASSWORD: "123456"
-    restart: unless-stopped
+    restart: always
     networks:
       local-mysql-ms-network:
         ipv4_address: 172.25.0.102
