--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "main index",
+            "name": "index",
             "program": "${workspaceFolder}\\index.js"
         },
         {
