--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "nconf": "^0.10.0",
     "redis": "^2.8.0",
     "request": "^2.88.0",
+    "require-directory": "^2.1.1",
     "restler": "^3.4.0",
     "sequelize": "^4.43.0",
     "socket.io": "^2.2.0",
