--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "multiparty": "^4.2.1",
     "mysql2": "^1.6.5",
     "nconf": "^0.10.0",
+    "node-schedule": "^1.3.2",
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "require-directory": "^2.1.1",
