任务模块初始化，日志记录

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,12 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "module-task",
+            "program": "${workspaceFolder}\\modules\\tasks\\index.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "test cnblogs",
             "program": "${workspaceFolder}\\libs\\cnblogs\\V3\\index.js"
         },
