model route 初始化采用绝对路径 module 安装脚本优化，采用硬链接。优点为 公用文件可同步

--- a/modules/.gitignore
+++ b/modules/.gitignore
@@ -5,6 +5,7 @@ auth/routes/index.js
 
 !auth/routes/
 !auth/install.bat
+!auth/install.bat.backup
 
 #modules tasks
 tasks/*
@@ -20,3 +21,4 @@ tasks/routes/index.js
 !tasks/routes/
 
 !tasks/install.bat
+!tasks/install.bat.backup
