--- a/modules/.gitignore
+++ b/modules/.gitignore
@@ -14,6 +14,7 @@ tasks/models/system/api_log
 tasks/models/index.js
 tasks/routes/index.js
 
+!tasks/cron/
 !tasks/libs/
 !tasks/libs/restler.js
 !tasks/libs/TaskMgr.js
