--- a/package.json
+++ b/package.json
@@ -28,22 +28,25 @@
   "author": "swzyt",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.5.3",
+    "@hapi/hapi": "^18.3.1",
+    "@hapi/inert": "^5.2.1",
+    "@hapi/vision": "^5.5.2",
+    "amqplib": "^0.5.5",
     "async-redis": "^1.1.7",
     "bagpipe": "^0.3.5",
     "boom": "^7.3.0",
-    "crawler": "^1.2.0",
+    "crawler": "^1.2.1",
     "guid": "0.0.12",
     "hapi": "^18.1.0",
-    "hapi-auth-jwt2": "^8.3.0",
-    "hapi-swagger": "^9.3.1",
+    "hapi-auth-jwt2": "^8.6.1",
+    "hapi-swagger": "^9.4.2",
     "images-downloader": "^1.0.3",
-    "inert": "^5.1.2",
+    "inert": "^5.1.3",
     "joi": "^14.3.1",
-    "jsonwebtoken": "^8.5.0",
-    "lodash": "^4.17.11",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "mongodb": "^3.1.13",
+    "mongodb": "^3.2.7",
     "multiparty": "^4.2.1",
     "mysql2": "^1.6.5",
     "nconf": "^0.10.0",
@@ -52,10 +55,10 @@
     "request": "^2.88.0",
     "require-directory": "^2.1.1",
     "restler": "^3.4.0",
-    "sequelize": "^4.43.0",
+    "sequelize": "^5.12.2",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "superagent": "^5.0.2",
+    "superagent": "^5.1.0",
     "vision": "^5.4.4"
   },
   "devDependencies": {}
