--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,12 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "module-auth",
+            "program": "${workspaceFolder}\\modules\\auth\\index.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "module-task",
             "program": "${workspaceFolder}\\modules\\tasks\\index.js"
         },
