任务优化 支持由首个进程启动全部任务 日志表记录主机名、日志类型 进程表记录主机名

--- a/modules/.gitignore
+++ b/modules/.gitignore
@@ -16,6 +16,7 @@ tasks/routes/index.js
 
 !tasks/cron/
 !tasks/libs/
+!tasks/libs/IP.js
 !tasks/libs/restler.js
 !tasks/libs/TaskMgr.js
 !tasks/models/
