项目文件夹名调整 readme文件编写 文件存储服务 storage 独立模块

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,12 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "module-storage",
+            "program": "${workspaceFolder}\\modules\\storage\\index.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "module-task",
             "program": "${workspaceFolder}\\modules\\tasks\\index.js"
         },
