--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
-.vscode/
 
 node_modules/
+
+static
 
 OldCode
 
