--- a/docker/mysql/docker-compose.yml
+++ b/docker/mysql/docker-compose.yml
@@ -1,46 +1,53 @@
-version: "3"
-
+version: '2'
 services:
-
-  local-mysql-master:
+  mysqlmaster:
     image: mysql:5.7
-    container_name: local-mysql-master
+    container_name: mysql-master
     ports:
-      - 3306:3306
-    volumes:
-      - /D/WorkSpace/Framework/HapiSample/docker/mysql/master/other:/var/lib/mysql
-      - /D/WorkSpace/Framework/HapiSample/docker/mysql/master/config/mysqld.conf:/etc/mysql/mysql.conf.d/mysqld.cnf
+      - '3306:3306'
     environment:
-      MYSQL_ROOT_PASSWORD: "123456"
-      MYSQL_DATABASE: Test
-      MYSQL_USER: testadmin
-      MYSQL_PASSWORD: "123456"
-    restart: always
+      - "MYSQL_ROOT_PASSWORD=root"
     networks:
-      local-mysql-ms-network:
-        ipv4_address: 172.25.0.101
+      mysql-ms-network:
+        ipv4_address: 10.20.1.2
+    volumes:
+      - ./data/mysql-master:/var/lib/mysql/
+      - ./config/mysql-master:/etc/mysql/conf.d/
 
-  local-mysql-slave:
+  mysqlslave:
     image: mysql:5.7
-    container_name: local-mysql-slave
+    container_name: mysql-slave
     ports:
-      - 33006:3306
-    volumes:
-      - /D/WorkSpace/Framework/HapiSample/docker/mysql/slave/other:/var/lib/mysql
-      - /D/WorkSpace/Framework/HapiSample/docker/mysql/slave/config/mysqld.conf:/etc/mysql/mysql.conf.d/mysqld.cnf
+      - '3307:3306'
     environment:
-      MYSQL_ROOT_PASSWORD: "123456"
-      MYSQL_DATABASE: Test
-      MYSQL_USER: testadmin
-      MYSQL_PASSWORD: "123456"
-    restart: always
+      - "MYSQL_ROOT_PASSWORD=root"
     networks:
-      local-mysql-ms-network:
-        ipv4_address: 172.25.0.102
+      mysql-ms-network:
+        ipv4_address: 10.20.1.3
+    depends_on:
+      - mysqlmaster
+    volumes:
+      - ./data/mysql-slave:/var/lib/mysql/
+      - ./config/mysql-slave:/etc/mysql/conf.d/
+
+  mysqlconfig:
+    image: mysql:5.7
+    container_name: mysql-config
+    environment:
+      - "MYSQL_SLAVE_PASSWORD=root"
+      - "MYSQL_MASTER_PASSWORD=root"
+      - "MYSQL_ROOT_PASSWORD=root"
+    networks:
+      mysql-ms-network:
+        ipv4_address: 10.20.1.4
+    volumes:
+      - ./mysql_connector.sh:/tmp/mysql_connector.sh
+    command: /bin/bash -x /tmp/mysql_connector.sh
 
 networks:
-  local-mysql-ms-network:
+  mysql-ms-network:
     driver: bridge
     ipam:
-      config:
-      - subnet: 172.25.0.0/24
+     config:
+       - subnet: 10.20.1.0/16
+         gateway: 10.20.1.1
