--- a/docker/mysql/docker-compose.yml
+++ b/docker/mysql/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       - '3307:3306'
     environment:
       - "MYSQL_ROOT_PASSWORD=root"
+    depends_on:
+      - mysqlmaster
     networks:
       mysql-ms-network:
         ipv4_address: 10.20.1.3
@@ -37,6 +39,9 @@ services:
       - "MYSQL_SLAVE_PASSWORD=root"
       - "MYSQL_MASTER_PASSWORD=root"
       - "MYSQL_ROOT_PASSWORD=root"
+    depends_on:
+      - mysqlmaster
+      - mysqlslave
     networks:
       mysql-ms-network:
         ipv4_address: 10.20.1.4
