--- a/docker/rabbitmq/docker-compose.yml
+++ b/docker/rabbitmq/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       # - RABBITMQ_NODENAME=local-rabbitmq1
 
     # volumes:
-    #   - /D/DockerFileSystem/rabbit:/var/lib/rabbitmq
+    #   - ./local-rabbitmq1:/var/lib/rabbitmq
     # 心跳检测
     # healthcheck:
     #   test: ["CMD", "curl", "-f", "http://127.0.0.1:5672"]
@@ -58,12 +58,12 @@ services:
 
       # 以下配置为用户自定义镜像支持的命令，官方镜像不支持
       # https://github.com/bijukunjummen/docker-rabbitmq-cluster
-      # - CLUSTERED=true
-      # - CLUSTER_WITH=local-rabbitmq1
-      # - RAM_NODE=true
+      - CLUSTERED=true
+      - CLUSTER_WITH=local-rabbitmq1
+      - RAM_NODE=true
 
     # volumes:
-    #   - /D/DockerFileSystem/rabbit:/var/lib/rabbitmq
+    #   - ./local-rabbitmq2:/var/lib/rabbitmq
     links:
       - local-rabbitmq1
     depends_on:
@@ -100,10 +100,12 @@ services:
 
       # 以下配置为用户自定义镜像支持的命令，官方镜像不支持
       # https://github.com/bijukunjummen/docker-rabbitmq-cluster
-      # - CLUSTERED=true
-      # - CLUSTER_WITH=local-rabbitmq1
-      # - RAM_NODE=true
-      
+      - CLUSTERED=true
+      - CLUSTER_WITH=local-rabbitmq1
+      - RAM_NODE=true
+
+    # volumes:
+    #   - ./local-rabbitmq3:/var/lib/rabbitmq
     links:
       - local-rabbitmq1
     depends_on:
